<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="app_name">Smart Home</string>
    <string name="hyperlink"><a href="https://play.google.com/store/apps/details?id=com.sinepulse.app">Send Feedback</a></string>
    <string name="desc">Smart Home is a app that enables its users to regulate various home appliances remotely.\n Smart Home combines technology and services to facilitate your better living quality, enhanced security and energy efficiency.</string>
    <string name="aboutText">Smart Home SinePulse  \n\nVersion : 0.1.1 \n \n@ SinePulse GmbH. (All Rights Reserved)</string>
   <string name="passchangetext">Password has changed successfully .\nPlease log in with new password.</string>
    <string name="my_password">my password</string>
    <string name="pay">Pending Tickets</string>
    <string name="next">Next</string>
    <string name="mandatory">*</string>
    <string name="login">Log In</string>
    <string name="wronguserpass">Invalid login credentials .Please check your username , password</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">NO</string>
    <string name="button_server_setting_yes">Configure Now</string>
    <string name="button_server_setting_no">Later</string>
    <string name="button_ok">OK</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_name">Settings</string>
    <string name="empty_basket">Kurv (tom)</string>
    <string name="live_stream">Video Stream</string>
    <string name="device_status">Device Status</string>
    <string name="username"> User Name</string>
    <string name="password"> Password</string>
    <string name="password1">Room user Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="usercredential">User Name:</string>
    <string name="passkey">Password:</string>
    <string name="terms_conditions">Terms and COnditions</string>
    <string name="more">More</string>
    <string name="scan">Scan</string>
    <string name="checkout">Checkout</string>
    <string name="ean">Ean</string>
    <string name="delete">Delete</string>
    <string name="add_item">add Item</string>
    <string name="todo">TODO</string>
    <string name="update_profile">Update Profile :</string>
    <string name="edit">Edit</string>
    <string name="indtast_login">User login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="post_number">Postnummer</string>
    <string name="post_number1">Postnummer</string>
    <string name="setting_hint"> log in user name</string>
    <string name="shopnumber_hint"> log in password</string>
    <string name="menu_basket_title"> 00.00dk </string>
    <string name="configure">Configure</string>
    <string name="device_control">Device Control</string>
    <string name="Home">DashBoard</string>
    <string name="Dashboard">Dashboard</string>
    <string name="find_product">Expand Room</string>
    <string name="create_room">Rooms</string>
    <string name="login_settings">User Log In</string>
    <string name="status">Status</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="family_name">Family Name</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="group">Group</string>
    <string name="alert_dlg_yes">Yes</string>
    <string name="alert_dlg_no">No</string>
    <string name="emptybasketmessage">This Page is under Construction.User will view his trouble tickets here.</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="app_name_drawer"></string>
    <string name="alldevices"> Dashboard</string>
    <string name="powerusage"> Power Usage</string>
    <string name="roomlist"> My Rooms</string>
    <string name="settings"> Profile</string>
    <string name="about"> About Us</string>
     <string name="support"> Support</string>
     <string name="help"> Help</string>
    <string name="cp"> Change Password</string>
    <string name="userlog"> Activities</string>
    <string name="continue_shopping">Continue Application</string>
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    <string name="networkError">No Netwok Connectivity ! \nPlease Check  your Network Connection.</string>
    <string name="Room_nameHint">Type Room Name</string>
    <string name="Device_numHint">Total Device</string>
    <string name="EnterPays_TextView_ZeroValue">0</string>
    <string name="add_room"> List Of Room </string>
    <string name="txtEmpty"> List is Empty </string>
    <string name="lblBtnDel"> Delete Selected Rooms </string>
    <string name="hintTxtItem"> Enter Room name Here </string>
    <string name="title_activity_room_manager">RoomManager</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="camera_prompt">Choose a Camera</string>
    <string name="voltage">Voltage</string>

    <string-array name="camera_arrays">
        <item>Technical</item>
        <item>Billing </item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>@string/alldevices</item>
         <item>@string/userlog</item>
        <!-- <item>@string/powerusage</item> -->
       <!--  <item>@string/roomlist</item> -->
        <item>@string/settings</item>
        <item>@string/cp</item>
        <item>@string/support</item>
        <item>@string/help</item>
        <item>@string/about</item>
         <item>@string/logout</item>

        <!--
        <item >@string/settings</item>
        <item>@string/about</item>
        -->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@@drawable/ic_action_view_as_grid1</item>
         <item>@drawable/user_log</item>
       <!--  <item>drawable/logo1</item> -->
       <!--  <item>@drawable/ic_action_view_as_list</item> -->
        <item>@drawable/userprofile</item>
        <item>@drawable/locknew</item>
        <item>@drawable/support</item>
        <item>@drawable/ic_help2</item>
        <item>@drawable/ic_menu_info_details_new1</item>
        <!-- <item>@drawable/ic_menu_info_details_new1</item> -->
        <item>@drawable/log_out_final</item>
        
        <!-- <item>@drawable/ic_menu_info_details_new</item> -->
        <!-- <item>@drawable/ic_action_import_export</item> -->
        <!--
        <item>@drawable/settings</item>
        <item>@drawable/ic_menu_info_details_new</item>
        -->
    </array>

    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="logout">Log Out</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="crash_toast_text">Oops ! Smart Home has crashed, but a report will be sent to app developer to help fix the issue !</string>

<string name="crash_dialog_title">Smart Home has crashed</string>
<string name="crash_dialog_text">An unexpected error occurred that forces the 
    app to stop. Please help us fix this by sending us error data/scenario,
    all you have to do is click OK.</string>
<string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
<string name="crash_dialog_ok_toast">Thank you to stay with us!</string>

</resources>