<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/sh_background_lyt">

    <ImageView
        android:id="@+id/aboutImageView01"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/aboutus"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/aboutImageView02"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvAboutHeadingText1"
        android:layout_marginTop="15dp"
        android:background="@color/gray_ash"
        android:contentDescription="@string/todo"
        android:layout_margin="20dp" />

    <com.sinepulse.app.custom.controls.CustomTextView
        android:id="@+id/tvAboutHeadingText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aboutImageView01"
        android:layout_marginTop="25dp"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:maxLines="6"
        android:singleLine="false"
        android:text="@string/aboutText"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <com.sinepulse.app.custom.controls.CustomTextView
        android:id="@+id/tvAboutHeadingText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvAboutHeadingText"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp"
        android:text="@string/hyperlink"
        android:textColor="#bdbdbd" />
    
    <include
            android:id="@+id/bottom"
           android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_bar_height"
            android:layout_alignParentBottom="true"
            layout="@layout/dashboard_bottom_bar" 
            android:visibility="visible" />
    

</RelativeLayout>